# trollchat.nvim

./: Cargo.toml  README.md  chat.lua
src/: main.rs
